# HomeAdam

./: CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_efficiency.py  benchmark_compile_capturable.py  benchmark_optimizers.py
src/homeadam/: __init__.py  _adam_srf.py  _functional.py  _homeadam.py  _homeadam_ew.py
tests/: conftest.py  test_adam_srf.py  test_functional.py  test_homeadam.py  test_homeadam_ew.py  test_integration.py  test_optimizer_features.py
